# test-bot-farm

./: .env  .gitignore  README.md  alembic.ini  coverage.xml  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini
app/: config.py  dependencies.py  main.py
app/application/: container.py  models.py
app/application/repositories/: __init__.py
app/application/services/: __init__.py  user.py
app/infrastructure/: container.py
app/infrastructure/db/: database.py  migration.py  schemas.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 224825a55c80_create_users_table.py
app/infrastructure/db/postgres/: database.py  migration.py  schemas.py
app/infrastructure/db/postgres/migrations/: env.py
app/infrastructure/db/redis/: repositories.py
app/infrastructure/db/repository/: user.py
app/presentation/: schemas.py
app/presentation/api/: __init__.py  health.py  user.py
app/presentation/middleware/: __init__.py  exceptions.py  logger.py
scripts/: start-main.sh
tests/: conftest.py  test_api_health.py  test_api_user.py  test_containers.py  test_database.py  test_dependencies.py  test_models.py  test_repository_user.py  test_services_user.py
