[project]
name = "template-fastapi"
version = "0.1.0"
description = "FastAPI template with clean architecture, PostgreSQL, Redis, and Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.17.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.121.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.27.0",
]
