[project]
name = "template-fastapi"
version = "0.1.0"
description = "FastAPI template with clean architecture, PostgreSQL, Redis, and Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.17.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.121.2",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.27.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.19.0",
]
